trunk/Archive2/1c/83febbd048a14e/output
main.cpp: In function 'std::istream& operator>>(std::istream&, Fraction)':
main.cpp:9:16: error: 'int Fraction::numo' is private
     signed int numo; // fraction numerator
                ^
main.cpp:15:23: error: within this context
     input >> fraction.numo;
                       ^
main.cpp:11:10: error: 'char Fraction::ch' is private
     char ch; // the '/' character
          ^
main.cpp:16:23: error: within this context
     input >> fraction.ch;
                       ^
main.cpp:10:16: error: 'int Fraction::deno' is private
     signed int deno; // fraction denomenator
                ^
main.cpp:17:22: error: within this context
     input >>fraction.deno;
                      ^
